# opensearch-k8s-operator-test-harness

./: .gitignore  README.md  config.yaml  pyproject.toml
oko_test_harness/: __init__.py  __main__.py  cli.py  executor.py  retry_utils.py
oko_test_harness/actions/: __init__.py  base.py  chaos.py  cluster.py  data.py  monitoring.py  scaling.py  upgrade.py  validation.py
oko_test_harness/models/: __init__.py  playbook.py
oko_test_harness/utils/: kubernetes.py  opensearch_client.py  playbook_parser.py
playbooks/: basic-deployment-v2.yaml  basic-deployment-v3.yaml  cluster-config-3-node-basic.yaml  cluster-config-5-node-basic.yaml  coordinator-roles-test.yaml  opensearch-2.19-to-3.0-upgrade.yaml  opensearch-2.9-to-2.17-upgrade.yaml  opensearch-2.9-to-2.19-upgrade.yaml  opensearch-3.0-to-3.2-upgrade.yaml  resilience-test.yaml  upgrade-test.yaml
scripts/: minikube-preload  preload-images.sh
