[tool.poetry]
name = "oko-test-harness"
version = "0.1.0"
description = "A comprehensive test harness for the OpenSearch Kubernetes Operator (OKO)"
authors = ["Test Team <test-team@example.com>"]
readme = "README.md"
packages = [{include = "oko_test_harness"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
kubernetes = "^28.1.0"
requests = "^2.31.0"
click = "^8.1.7"
jinja2 = "^3.1.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
loguru = "^0.7.2"
tenacity = "^8.2.3"
typing-extensions = "^4.8.0"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
oko-test = "oko_test_harness.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true